<!--
  Copyright 2013 Google Inc.
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WizardPageContainer"
    android:orientation="vertical">

    <TextView style="@style/WizardPageTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ListView
            android:id="@android:id/list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dividerHeight="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:saveEnabled="false"
            android:scrollbarStyle="outsideOverlay"
            tools:ignore="InefficientWeight" />

        <LinearLayout
            android:id="@+id/foulLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="?android:attr/listPreferredItemPaddingLeft"
            android:paddingStart="?android:attr/listPreferredItemPaddingLeft">

            <TextView
                android:id="@+id/subTitle"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/foulGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/seriousFoul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/foul_lost_game" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
