<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.matchinfo.MatchInfoActivity">

    <com.brookmanholmes.bma.utils.CustomViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <RelativeLayout
                android:id="@+id/playerNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playerName"
                    style="@style/activity_player_name"
                    android:text="Brookman Holmes" />

                <LinearLayout
                    android:id="@+id/playerTurnIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignLeft="@+id/playerName"
                    android:layout_alignRight="@+id/playerName"
                    android:layout_below="@+id/playerName"
                    android:layout_marginBottom="2dp"
                    android:background="@color/colorPrimaryLight"
                    android:orientation="horizontal" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/opponentNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:elevation="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/opponentName"
                    style="@style/activity_player_name"
                    android:text="Cliff Maxson" />

                <LinearLayout
                    android:id="@+id/opponentTurnIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignLeft="@+id/opponentName"
                    android:layout_alignRight="@+id/opponentName"
                    android:layout_below="@+id/opponentName"
                    android:layout_marginBottom="2dp"
                    android:background="@color/colorPrimaryLight"
                    android:orientation="horizontal" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttonAddTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:elevation="12dp"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/white" />

</android.support.design.widget.CoordinatorLayout>
