<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="4dp"
    android:orientation="vertical">

    <com.brookmanholmes.bma.wizard.ui.StepPagerStrip
        android:id="@+id/strip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:paddingTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        tools:showIn="@layout/activity_create_new_match">

        <Button
            android:id="@+id/prev_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/previous" />

        <Button
            android:id="@+id/next_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>