<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.matchinfo.MatchInfoActivity">
    <item
        android:id="@+id/action_notes"
        android:orderInCategory="100"
        android:title="@string/match_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_location"
        android:orderInCategory="101"
        android:title="@string/match_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_game_status"
        android:orderInCategory="110"
        android:title="@string/view_game_status"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:orderInCategory="1"
        android:title="@string/undo_turn"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:orderInCategory="2"
        android:title="@string/redo_turn"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_match_view"
        android:icon="@drawable/ic_view_list"
        android:orderInCategory="0"
        android:title="@string/toggle_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_submit_feedback"
        android:orderInCategory="500"
        android:title="@string/submit_feedback"
        app:showAsAction="never" />
</menu>